<resources>
    <string name="app_name">Tarea02</string>
    <string name="title_bicycle">VINTAGE BICYCLE</string>
    <string name="color_bicycle">COLOR</string>
    <string name="bicycle_m">M</string>
    <string name="bicycle_s">S</string>
    <string name="bicycle_l">L</string>
    <string name="bicycle_xl">XL</string>
    <string name="description">Description</string>
    <string name="description_bicycle">Marco de acero ligero personalizado.
        Sin restaurar en hermosa condición original.
        Ligeramente usada y bien cuidada.
        Historial de registro de velocidad original.</string>
    <string name="measurement">Medida</string>
    <string name="measurement_text">Medidas mamalonas.
    askhkhdbaskhbkadfbajdnlakfdeonfjwqoiglbuuwrbgoyrwhgbriwyhgbpqwr
    asasdasdsadSADdsnfjfh sajfhbwlirugbwrigbwiorugbslighdbdslhbasdhgbsidogybs
    SADASDSDSADsdDSdskfbwufybuwqyhbowqygbowirygbo8wrqygb9wrygbrwi
    AFASDAFDSAFDSFSDAF</string>
    <string name="add_to_cart">Agregar al carro.</string>
    <string name="added_to_cart">Dentro del carro.</string>
    <string name="already_in_cart">El producto ya esta en el carro.</string>
</resources>
